--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,42 @@
           }
         }
       }
+    },
+    "@mikkel-ol/shortcut-listener": {
+      "projectType": "library",
+      "root": "projects/mikkel-ol/shortcut-listener",
+      "sourceRoot": "projects/mikkel-ol/shortcut-listener/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/mikkel-ol/shortcut-listener/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/mikkel-ol/shortcut-listener/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/mikkel-ol/shortcut-listener/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/mikkel-ol/shortcut-listener/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
+  },
+  "cli": {
+    "analytics": "d40dbc7f-9b61-4dc2-9c89-c65147bc5e12"
   }
 }
