--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ng-packagr": "^16.0.0",
+    "prettier": "^2.8.8",
     "typescript": "~5.0.2"
   }
 }
